syntax = "proto3";

package clonr.v1;

option go_package = "github.com/inovacc/clonr/internal/api/v1";

import "v1/common.proto";
import "v1/repository.proto";
import "v1/config.proto";
import "v1/profile.proto";
import "v1/workspace.proto";

// ClonrService defines all database operations for Clonr
service ClonrService {
  // Health check - corresponds to Ping()
  rpc Ping(Empty) returns (Empty);

  // Repository operations
  rpc SaveRepo(SaveRepoRequest) returns (SaveRepoResponse);
  rpc RepoExistsByURL(RepoExistsByURLRequest) returns (RepoExistsByURLResponse);
  rpc RepoExistsByPath(RepoExistsByPathRequest) returns (RepoExistsByPathResponse);
  rpc InsertRepoIfNotExists(InsertRepoIfNotExistsRequest) returns (InsertRepoIfNotExistsResponse);
  rpc GetAllRepos(GetAllReposRequest) returns (GetAllReposResponse);
  rpc GetRepos(GetReposRequest) returns (GetReposResponse);
  rpc SetFavoriteByURL(SetFavoriteRequest) returns (SetFavoriteResponse);
  rpc UpdateRepoTimestamp(UpdateRepoTimestampRequest) returns (UpdateRepoTimestampResponse);
  rpc RemoveRepoByURL(RemoveRepoByURLRequest) returns (RemoveRepoByURLResponse);

  // Configuration operations
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc SaveConfig(SaveConfigRequest) returns (SaveConfigResponse);

  // Profile operations
  rpc SaveProfile(SaveProfileRequest) returns (SaveProfileResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc GetActiveProfile(GetActiveProfileRequest) returns (GetActiveProfileResponse);
  rpc SetActiveProfile(SetActiveProfileRequest) returns (SetActiveProfileResponse);
  rpc ListProfiles(ListProfilesRequest) returns (ListProfilesResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);
  rpc ProfileExists(ProfileExistsRequest) returns (ProfileExistsResponse);

  // Workspace operations
  rpc SaveWorkspace(SaveWorkspaceRequest) returns (SaveWorkspaceResponse);
  rpc GetWorkspace(GetWorkspaceRequest) returns (GetWorkspaceResponse);
  rpc GetActiveWorkspace(GetActiveWorkspaceRequest) returns (GetActiveWorkspaceResponse);
  rpc SetActiveWorkspace(SetActiveWorkspaceRequest) returns (SetActiveWorkspaceResponse);
  rpc ListWorkspaces(ListWorkspacesRequest) returns (ListWorkspacesResponse);
  rpc DeleteWorkspace(DeleteWorkspaceRequest) returns (DeleteWorkspaceResponse);
  rpc WorkspaceExists(WorkspaceExistsRequest) returns (WorkspaceExistsResponse);
  rpc GetReposByWorkspace(GetReposByWorkspaceRequest) returns (GetReposByWorkspaceResponse);
  rpc UpdateRepoWorkspace(UpdateRepoWorkspaceRequest) returns (UpdateRepoWorkspaceResponse);
}
